# Sprout

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/: sprout.service
packaging/bundle/: install.cmd  install.sh
scripts/: install.sh  uninstall.sh
src/: auth.rs  config.rs  gpu.rs  main.rs  specs.rs
src/gpu/: amd.rs  apple.rs  intel.rs  mod.rs  nvidia.rs  vulkan.rs
