[package]
name = "sprout"
description = "Lightweight HTTP agent that reports a device's hardware (GPU/VRAM, RAM, CPU, backends) for LettuceAI runnability checks."
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
nvml-wrapper = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.38.4"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
