[package]
name = "sprout"
description = "Lightweight HTTP agent that reports a device's hardware (GPU/VRAM, RAM, CPU, backends) for LettuceAI runnability checks."
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
ash = "0.38.0"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.38.4"
toml = "0.8.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
strip = true
lto = true
codegen-units = 1
